# league-of-crates

./: Cargo.toml  README.md  special_cases.json
src/: champion.rs  json_macros.rs  lib.rs
src/champion/: champdir.rs  champion.rs  champstats.rs  specialcases.rs
src/json_macros/: thirteen_fifteen_one.rs
src/json_macros/thirteen/fifteen/one/: special_cases.json
