[package]
name = "league-of-crates"
version = "0.1.1"
edition = "2021"
exclude = [".idea/"]
description = "Beginner project for learning rust. Parses league of legends .json data from DataDragon into Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
serde =  {version = "1.0.178", features = ["derive"]}
serde_json = "1.0.104"
