[package]
name = "league-of-crates"
version = "0.3.4"
edition = "2021"
exclude = [".idea/"]
description = "Beginner project for learning rust. Parses league of legends .json data from DataDragon into Rust"
license = "MIT"
keywords = ["league-of-legends", "cdragon", "league"]
repository = "https://github.com/SneedSeedFeed/league-of-crates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
reqwest = { version = "0.11.18", features = ["json", "serde_json"] }
serde = {version = "=1.0.171", features = ["derive"]}
serde_json = "1.0.104"
tokio = {version="1.31.0", features = ["full"]}
